--- a/wii-usb/private/C1MOD/3wonders.cfg
+++ b/wii-usb/private/C1MOD/3wonders.cfg
@@ -33,7 +33,7 @@ particle_type = "0"
 particle_speed = "1.000000"
 particle_clr = "55000"
 libretro_path = "boot.dol"
-libretro_directory = "usb:/apps/ra-3wonders"
+libretro_directory = "usb:/apps/ra-cps1"
 rewind_enable = "false"
 audio_sync = "true"
 rewind_granularity = "1"
@@ -75,20 +75,20 @@ audio_volume = "0.000000"
 audio_driver = "gx"
 audio_enable = "true"
 audio_out_rate = "48000"
-system_directory = "usb:/private/C1MOD/C1MOD/system"
-extraction_directory = "usb:/private/C1MOD/C1MOD/system/temp"
+system_directory = "usb:/private/C1MOD/system"
+extraction_directory = "usb:/private/C1MOD/system/temp"
 audio_resampler = "SINC"
 audio_sinc_taps = "8"
-savefile_directory = "usb:/private/C1MOD/C1MOD/savefiles"
-savestate_directory = "usb:/private/C1MOD/C1MOD/savestates"
-video_filter_dir = "usb:/private/C1MOD/C1MOD/videofilters"
-audio_filter_dir = "usb:/private/C1MOD/C1MOD/audiofilters"
+savefile_directory = "usb:/private/C1MOD/savefiles"
+savestate_directory = "usb:/private/C1MOD/savestates"
+video_filter_dir = "usb:/private/C1MOD/videofilters"
+audio_filter_dir = "usb:/private/C1MOD/audiofilters"
 rgui_browser_directory = "usb:/Games/Arcade (FB Alpha 2012 CPS-1)"
 rgui_config_directory = "default"
 rgui_show_start_screen = "false"
 input_autodetect_enable = "true"
-overlay_directory = "usb:/private/C1MOD/C1MOD/overlays"
-input_overlay = "usb:/private/C1MOD/C1MOD/overlays/..."
+overlay_directory = "usb:/private/C1MOD/overlays"
+input_overlay = "usb:/private/C1MOD/overlays/..."
 input_overlay_opacity = "0.700000"
 input_overlay_scale = "1.000000"
 gamma_correction = "false"
@@ -222,7 +222,7 @@ input_player1_r_y_minus = "nul"
 input_player1_r_y_minus_btn = "nul"
 input_player1_r_y_minus_axis = "nul"
 input_player1_turbo = "nul"
-input_player1_turbo_btn = "nul"
+input_player1_turbo_btn = "45"
 input_player1_turbo_axis = "nul"
 input_toggle_fast_forward = "space"
 input_toggle_fast_forward_btn = "nul"
@@ -375,7 +375,7 @@ input_player2_r_y_minus = "nul"
 input_player2_r_y_minus_btn = "nul"
 input_player2_r_y_minus_axis = "nul"
 input_player2_turbo = "nul"
-input_player2_turbo_btn = "nul"
+input_player2_turbo_btn = "45"
 input_player2_turbo_axis = "nul"
 input_player3_b = "nul"
 input_player3_b_btn = "45"
